[gd_scene load_steps=2 format=2]

[ext_resource path="res://localization_system/TranslationManager.gd" type="Script" id=1]

[node name="LocalizationSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="LineEdit3" type="TextEdit" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -322.0
margin_top = 224.702
margin_bottom = 354.702
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -322.0
margin_bottom = 197.0
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
text = "dfsldöjfsdj"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -322.0
margin_top = 196.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -313.0
margin_top = -56.0
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
text = "dfsldöjfsdj"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -313.0
margin_top = -85.0
margin_bottom = -57.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
